--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "request": "^2.87.0",
     "slug": "^0.9.1",
     "underscore": "^1.9.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.12.0"
   }
 }
