chore(api): include a max-length rule of 80 characters

--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     "mocha": true
   },
   "rules": {
+    "max-len": ["error", { "code": 80 }],
     "one-var": 0,
     "one-var-declaration-per-line": 0,
     "new-cap": 0,
@@ -14,7 +15,7 @@
     "no-param-reassign": 0,
     "comma-dangle": 0,
     "curly": ["error", "multi-line"],
-    "import/no-unresolved": [2, { commonjs: true }],
+    "import/no-unresolved": [2, { "commonjs": true }],
     "no-shadow": ["error", { "allow": ["req", "res", "err"] }],
     "valid-jsdoc": ["error", {
       "requireReturn": true,
