--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "underscore": "^1.9.1"
   },
   "devDependencies": {
-    "eslint": "^5.12.0"
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
   }
 }
