chore(postgres):restructure folders to get app working add .env to store environmental variable fix register and get user controller [ #162727542]

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "habibaudu",
     "password": null,
-    "database": "AuthorsHaven",
+    "database": "authorshaven",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
