--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
     "babel-preset-env": "^1.7.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
@@ -23,10 +24,6 @@
     "express-jwt": "^5.3.1",
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.3.0",
-    "method-override": "^2.3.10",
-    "methods": "^1.1.2",
-    "mongoose": "^5.2.2",
-    "mongoose-unique-validator": "^2.0.1",
     "morgan": "^1.9.0",
     "nodemon": "^1.18.9",
     "passport": "^0.4.0",
@@ -34,8 +31,6 @@
     "pg": "^7.7.1",
     "pg-hstore": "^2.3.2",
     "request": "^2.87.0",
-    "sequelize": "^4.42.0",
-    "slug": "^0.9.1",
-    "underscore": "^1.9.1"
+    "sequelize": "^4.42.0"
   }
 }
