--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
   },
   "rules": {
     "max-len": ["error", { "code": 80 }],
+    "function-paren-newline": 0,
     "one-var": 0,
     "one-var-declaration-per-line": 0,
     "new-cap": 0,
