[#162727542] cleanup - convert config to js file - refactor models index file - add env to gitignore

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "babel-node server.js",
     "dev:start": "babel-watch server.js",
-    "test": "mocha --require babel-polyfill --require babel-register test/*.js"
+    "test": "mocha --require babel-polyfill --require babel-register test/*.js",
+    "db:migrate": "sequelize db:migrate"
   },
   "author": "Andela Simulations Programme",
   "license": "MIT",
