--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
     "slug": "^0.9.1",
+    "supertest": "^3.3.0",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
