--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: node_js
 node_js:
  - "10.14.1"
+ services:
+  - postgresql
+before_script:
+  - psql -c 'create database authors_haven;' -U postgres
+  - npm run db:migrate
 after_success:
   - npm run coverage
