--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pg-hstore": "^2.3.2",
     "request": "^2.87.0",
     "sequelize": "^4.42.0",
+    "sequelize-cli": "^5.4.0",
     "slug": "^0.9.1",
     "underscore": "^1.9.1"
   },
