--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "sequelize-cli": "^5.4.0",
     "slug": "^0.9.1",
     "supertest": "^3.3.0",
-    "underscore": "^1.9.1"
+    "underscore": "^1.9.1",
+    "validator": "^10.10.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
