--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,12 @@
 {
 	"presets": [
-		"env",
+		"env"
 	],
 	"plugins": [
     ["transform-runtime", {
       "polyfill": false,
       "regenerator": true
     }]
-  ]
+  ],
+  "ignore": "node_modules"
 }
