--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "A Social platform for the creative at heart",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node server.js",
+    "start": "npm run build && node ./build/server.js",
     "dev:start": "babel-watch server.js",
+    "build": "./node_modules/.bin/babel ./ --ignore 'node_modules,build,.github,.nyc_output' -d build",
+    "clean:build": "rm -rf build",
     "test": "NODE_ENV=test nyc mocha --require babel-register --exit",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "db:migrate": "sequelize db:migrate",
@@ -16,6 +18,7 @@
   "author": "Andela Simulations Programme",
   "license": "MIT",
   "dependencies": {
+    "@babel/node": "^7.2.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "bcrypt": "^3.0.3",
