--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Social platform for the creative at heart",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build && node ./build/server.js",
+    "start": "npm run clean:build && npm run build && node ./build/server.js",
     "dev:start": "babel-watch server.js",
     "build": "./node_modules/.bin/babel ./ --ignore 'node_modules,build,.github,.nyc_output' -d build",
     "clean:build": "rm -rf build",
