--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Andela Simulations Programme",
   "license": "MIT",
   "dependencies": {
+    "@babel/cli": "^7.2.3",
     "@babel/node": "^7.2.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
