--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
