--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "pg": "^7.7.1",
     "pg-hstore": "^2.3.2",
     "request": "^2.87.0",
