--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,22 @@
+// {
+// 	"presets": [
+// 		"env"
+// 	],
+// 	"plugins": [
+//     ["transform-runtime", {
+//       "polyfill": false,
+//       "regenerator": true
+//     }]
+//   ]
+// }
+
 {
-	"presets": [
-		"env"
-	],
-	"plugins": [
-    ["transform-runtime", {
-      "polyfill": false,
-      "regenerator": true
-    }]
+  "presets": [
+    ["@babel/preset-env", {
+      "useBuiltIns": false,
+    }],
+  ],
+  "plugins": [
+    "@babel/plugin-transform-runtime"
   ]
 }
