--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Social platform for the creative at heart",
   "main": "index.js",
   "scripts": {
-    "start": "npm run clean:build && npm run build && node ./build/server.js",
+    "start": "npm run build && node ./build/server.js",
     "dev:start": "babel-watch server.js",
     "build": "./node_modules/.bin/babel ./ --ignore 'node_modules,build,.github,.nyc_output' -d build",
     "clean:build": "rm -rf build",
@@ -21,6 +21,7 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
+    "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.2.3",
     "babel-cli": "^6.26.0",
