[#163223759]: fixing heroku issue

--- a/.babelrc
+++ b/.babelrc
@@ -13,8 +13,8 @@
 {
   "presets": [
     ["@babel/preset-env", {
-      "useBuiltIns": false,
-    }],
+      "regenerator": true
+    }]
   ],
   "plugins": [
     "@babel/plugin-transform-runtime"
