--- a/.babelrc
+++ b/.babelrc
@@ -1,22 +1,12 @@
-// {
-// 	"presets": [
-// 		"env"
-// 	],
-// 	"plugins": [
-//     ["transform-runtime", {
-//       "polyfill": false,
-//       "regenerator": true
-//     }]
-//   ]
-// }
-
 {
-  "presets": [
-    ["@babel/preset-env", {
+	"presets": [
+		"@babel/preset-env"
+	],
+	"plugins": [
+    ["transform-runtime", {
+      "polyfill": false,
       "regenerator": true
     }]
-  ],
-  "plugins": [
-    "@babel/plugin-transform-runtime"
   ]
 }
+
