--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ PORT=<port number>
 DEV_DATABASE_URL=postgres://127.0.0.1:5432/<DB_NAME>
 NODE_ENV=development
 SECRET_KEY =<secret key>
+GOOGLE_ID=<google api id>
+GOOGLE_SECRET=<google api secret key>
