--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ NODE_ENV=development
 SECRET_KEY =<secret key>
 GOOGLE_ID=<google api id>
 GOOGLE_SECRET=<google api secret key>
+FACEBOOK_ID=<google api id>
+FACEBOOK_SECRET=<google api secret key>
