update .envexample with the callback url

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ GOOGLE_ID=<google api id>
 GOOGLE_SECRET=<google api secret key>
 FACEBOOK_ID=<google api id>
 FACEBOOK_SECRET=<google api secret key>
+FACEBOOK_CALLBACK=<http://localhost:PORT>
