--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "cors": "^2.8.4",
+    "date-fns": "^1.30.1",
     "dotenv": "^6.0.0",
     "ejs": "^2.6.1",
     "errorhandler": "^1.5.0",
