--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.4.0",
     "morgan": "^1.9.0",
+    "npm": "^6.7.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
