[#163460156] correct production script for pushing to heroku

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "db:migrate:testdb": "NODE_ENV=test npm run db:migrate",
     "undo:migrations": "sequelize db:migrate:undo:all",
     "undo:migrations:testdb": "NODE_ENV=test npm run undo:migrations",
-    "heroku:prod": "git push heroku-prod develop",
+    "heroku:prod": "git push heroku-prod master",
     "heroku:staging": "git push heroku-staging develop"
   },
   "author": "Andela Simulations Programme",
