--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,12 @@
 {
-	"presets": [
-		"env",
-	],
-	"plugins": [
-    ["transform-runtime", {
-      "regenerator": true
-    } ], 
-    "transform-object-rest-spread"
-  ]
+  "presets": [
+    [
+      "env", {
+        "targets": {
+          "node": "current"
+        }
+      }
+    ]
+  ],
+    "plugins": ["transform-object-rest-spread"]
 }
