--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express-jwt": "^5.3.1",
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.4.0",
+    "moment": "^2.24.0",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
