--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "errorhandler": "^1.5.0",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
+    "express-paginate": "^1.0.0",
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.4.0",
     "morgan": "^1.9.0",
