--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "passport-twitter": "^1.0.4",
     "pg": "^7.7.1",
     "pg-hstore": "^2.3.2",
+    "pusher": "^2.2.0",
     "request": "^2.87.0",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
