--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
   "env": {
     "node": true,
     "es6": true,
-    "mocha": true
+    "mocha": true,
+    "browser": true
   },
   "rules": {
     "max-len": ["error", { "code": 80 }],
