--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcrypt": "^3.0.3",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
+    "cloudinary": "^1.13.2",
     "cors": "^2.8.4",
     "date-fns": "^1.30.1",
     "dotenv": "^6.0.0",
