[feature: #162727574] add cloudinary config to env file

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,13 @@ NODE_ENV=development
 SECRET_KEY =<secret key>
 GOOGLE_ID=<google api id>
 GOOGLE_SECRET=<google api secret key>
-FACEBOOK_ID=<google api id>
+FACEBOOK_ID=<facebook api id>
 FACEBOOK_SECRET=<google api secret key>
 FACEBOOK_CALLBACK=<http://localhost:PORT>
+EMAIL_API_KEY=<email api key>
+PUSHER_APPID=<pusher api id>
+PUSHER_KEY=<pusher api key>
+PUSHER_SECRET=<pusher secret key>
+CLOUDINARY_CLOUD_NAME=<cloud name>
+CLOUDINARY_API_KEY=<api key>
+CLOUDINARY_API_SECRET=<api secret>
