--- a/package.json
+++ b/package.json
@@ -46,10 +46,11 @@
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
+    "passport-twitter-token": "^1.3.0",
     "pg": "^7.7.1",
     "pg-hstore": "^2.3.2",
     "pusher": "^2.2.0",
-    "request": "^2.87.0",
+    "request": "^2.88.0",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
     "slug": "^0.9.1",
