[bug: 164214299] implement feedback

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,4 @@ PUSHER_APPID=<pusher api id>
 PUSHER_KEY=<pusher api key>
 PUSHER_SECRET=<pusher secret key>
 FRONTEND_URL=<url for the frontend app>
+CLIENT_PORT=<your frontend port>
